# Claudator-Goles

./: .dockerignore  .gitignore  Dockerfile.betfair  docker-entrypoint-betfair.sh  pyproject.toml
docs/superpowers/plans/: 2026-07-02-goal-predictor-calibration-improvements.md  2026-07-02-goal-predictor-foundations.md  2026-07-02-goal-predictor-gbt-correction-layer.md  2026-07-09-goal-predictor-feature-enrichment.md  2026-07-10-goal-predictor-model-persistence-and-calibration-fix.md  2026-07-11-closing-line-odds-experiment.md  2026-07-11-goal-predictor-market-rest-features.md  2026-07-11-live-betfair-odds-pipeline.md  2026-07-12-chile-own-xg-and-backfill.md  2026-07-12-chile-shadow-mode.md  2026-07-12-sofascore-live-scraper.md
src/goles/: backtest.py  cli.py  dataset.py  db.py  experiment_closing_lines.py  features.py  gbt_model.py  ingest_cards.py  ingest_history.py  ingest_odds.py  model.py  persistence.py  priors.py  train_gbt.py  train_gbt_chile.py  train_gbt_replication.py  train_xg.py  validate_xg_vs_sofascore.py  xg_model.py
tests/: test_backtest.py  test_betfair_auth.py  test_betfair_client.py  test_betfair_odds_store.py  test_betfair_poller.py  test_betfair_team_aliases.py  test_dataset.py  test_db.py  test_elo_loader.py  test_features.py  test_football_data_loader.py  test_gbt_model.py  test_model.py  test_persistence.py  test_priors.py  test_sofascore_backfill.py  test_sofascore_client.py  test_sofascore_poller.py  test_sofascore_store.py  test_sofascore_team_aliases.py  test_sofascore_translate.py  test_understat_loader.py  test_xg_model.py
(+19 files in other folders)
