[project]
name = "goles"
version = "0.1.0"
description = "Live football goal-probability predictor: free historical data, baseline model, backtesting."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "requests>=2.31",
    "soccerdata>=1.9",
    "scipy>=1.13",
    "lightgbm>=4.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
